--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
         <!-- Spring Security -->
 
         <dependency>
@@ -231,6 +235,16 @@
             <artifactId>el-api</artifactId>
             <version>2.2</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.191</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
