--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.thymeleaf.cache=false
 purge.cron.expression=0 0 5 * * ?
 
 server.port=8081
+
+# Uncomment the keys to enable captcha
+#google.recaptcha.key.site=6LfaHiITAAAAAAgZBHl4ZUZAYk5RlOYTr6m2N34X
+#google.recaptcha.key.secret=6LfaHiITAAAAANpDTA_Zflwib95IhDqg2SNRLt4U
+
