--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,14 @@ server.port=8081
 google.recaptcha.key.site=6LfaHiITAAAAAAgZBHl4ZUZAYk5RlOYTr6m2N34X
 google.recaptcha.key.secret=6LfaHiITAAAAANpDTA_Zflwib95IhDqg2SNRLt4U
 
+################### JavaMail Configuration ##########################
+support.email=eugen@baeldung.com
+spring.mail.host=email-smtp.us-east-1.amazonaws.com
+spring.mail.port=465
+spring.mail.protocol=smtps
+spring.mail.username=AKIAJIKXZAQFFJDXI4VQ
+spring.mail.password=
+spring.mail.properties.mail.transport.protocol=smtps
+spring.mail.properties.mail.smtps.auth=true
+spring.mail.properties.mail.smtps.starttls.enable=true
+spring.mail.properties.mail.smtps.timeout=2000
