fix SchemaExport issue

--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -6,7 +6,7 @@ jdbc.user=tutorialuser
 jdbc.pass=tutorialmy5ql
 init-db=false
 ################### Hibernate Configuration ##########################
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.baeldung.persistence.CustomMySQLDialect
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=create-drop
 
