fix setup issue

--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -8,7 +8,7 @@ init-db=false
 ################### Hibernate Configuration ##########################
 hibernate.dialect=org.baeldung.persistence.CustomMySQLDialect
 hibernate.show_sql=false
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=update
 
 ####### H2
 #################### DataSource Configuration ##########################
