fix login redirect, fix reset pass, registration page

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+        </dependency>
 
 	</dependencies>
 
