--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,12 @@ google.recaptcha.key.site=6LfaHiITAAAAAAgZBHl4ZUZAYk5RlOYTr6m2N34X
 google.recaptcha.key.secret=6LfaHiITAAAAANpDTA_Zflwib95IhDqg2SNRLt4U
 
 ################### JavaMail Configuration ##########################
-support.email=USERNAME@gmail.com
+support.email=lore.crusoveanu@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
 spring.mail.protocol=smtps
-spring.mail.username=USERNAME@gmail.com
-spring.mail.password=PASSWORD
+spring.mail.username=lore.crusoveanu@gmail.com
+spring.mail.password=bMolko66
 spring.mail.properties.mail.transport.protocol=smtps
 spring.mail.properties.mail.smtps.auth=true
 spring.mail.properties.mail.smtps.starttls.enable=true
