add property to view sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.mail.properties.mail.transport.protocol=smtps
 spring.mail.properties.mail.smtps.auth=true
 spring.mail.properties.mail.smtps.starttls.enable=true
 spring.mail.properties.mail.smtps.timeout=8000
+
+# uncomment this property to see the SQL statements generated
+#logging.level.org.hibernate.SQL=DEBUG
