--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,21 @@
 			<version>${guava.version}</version>
 		</dependency>
 
+        <!-- User Agent parser -->
+        <dependency>
+            <groupId>com.github.ua-parser</groupId>
+            <artifactId>uap-java</artifactId>
+            <version>${uap-java.version}</version>
+        </dependency>
+
+        <!-- maxmind dependency -->
+
+        <dependency>
+            <groupId>com.maxmind.geoip2</groupId>
+            <artifactId>geoip2</artifactId>
+            <version>${geoip2.version}</version>
+        </dependency>
+
 		<!-- test -->
 
         <dependency>
@@ -132,7 +147,6 @@
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
 			</resource>
 		</resources>
 
@@ -213,6 +227,8 @@
 		<passay.version>1.0</passay.version>
         <logstash-logback-encoder.version>4.8</logstash-logback-encoder.version>
         <aerogear.version>1.0.0</aerogear.version>
+        <uap-java.version>1.4.0</uap-java.version>
+        <geoip2.version>2.12.0</geoip2.version>
 	</properties>
 
 </project>
